package com.cy.gaea.netty;

/**
 * Created by cy on 2016/7/10.
 */
public class ResponseFurture {
}
